# jacksp1p2

./: CMakeLists.txt  HARDWARE.md  partitions.csv  sdkconfig.defaults
components/p1p2_matter/: CMakeLists.txt  p1p2_matter_bridge.cpp  p1p2_matter_custom.c  p1p2_matter_device.c  p1p2_matter_fan.c  p1p2_matter_sensors.c  p1p2_matter_thermostat.c
components/p1p2_matter/include/: p1p2_matter_bridge.h  p1p2_matter_clusters.h
components/p1p2_network/: CMakeLists.txt  p1p2_thread.c
components/p1p2_protocol/: p1p2_fseries_control.c  p1p2_fseries_decode.c  p1p2_param_conversion.c
components/p1p2_protocol/include/: p1p2_fseries.h  p1p2_protocol.h
test/main/: test_main.c
